examples/typechecking/affine.an
// A nonCopy type for testing affine semantics
type Resource = id: I32

consume _ = ()

// NonCopy type used twice should error on the first (nonlast) use 
use_twice () =
    r = Resource 1
    consume r
    consume r

// A type can be used multiple times if there is a `Copy t` impl for it 
copy_twice () =
    x = 1
    a = x + 1
    b = x + 2
    a + b

// Taking a reference does not count as a move 
ref_then_use () =
    r = Resource 2
    r_ref = ref r
    consume r

// Non-copy value used in both if/else branches (each is a move) 
use_in_both_branches (cond: Bool) =
    r = Resource 3
    if cond
    then consume r
    else consume r

// Non-copy value used before if that also uses it should error 
use_before_branch (cond: Bool) =
    r = Resource 4
    consume r
    if cond
    then consume r
    else ()

// Closures capture by reference currently so this is fine, but should be an error if we capture by move
capture_then_use () =
    r = Resource 5
    f () = consume r
    consume r

// A copyable function parameter used multiple times is fine 
copy_param (x: I32) =
    a = x + 1
    b = x + 2
    a + b

take_two (a: Resource) (b: Resource) : Unit = ()

// Non-copy value passed as two arguments should error on first arg 
double_arg () =
    r = Resource 6
    take_two r r

type NonCopy = x: Unit

type Two t =
    one: t
    two: t

// Decompose a non-copy type into each field separately
decompose_fields () =
    c = Two (Two (NonCopy ()) (NonCopy ())) (Two (NonCopy ()) (NonCopy ()))
    _ = c.one.one
    _ = c.one.two
    _ = c.two
    _ = c.two.two

// Method for testing notes in error messages when they are too far away
// to show in the same span
move_long_ago () =
    r = Resource 42
    consume r
    ()
    ()
    ()
    ()
    ()
    take_two r r

main () = ()

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/typechecking/affine.an:10:13
//  8 |     r = Resource 1
//  9 |     consume r	// note: r was previously moved here
//    |             -
// 10 |     consume r	// error: Use of moved value r
//    |             ^
// 
// examples/typechecking/affine.an:37:18
// 34 |     r = Resource 4
// 35 |     consume r	// note: r was previously moved here
//    |             -
// 36 |     if cond
// 37 |     then consume r	// error: Use of moved value r
//    |                  ^
// 38 |     else ()
// 
// examples/typechecking/affine.an:57:16
// 56 |     r = Resource 6
//    |     // error: Use of moved value r
//    |     // note: r was previously moved here
// 57 |     take_two r r
//    |              - ^
// 
// examples/typechecking/affine.an:71:14
// 69 |     _ = c.one.two
// 70 |     _ = c.two	// note: c.two.two was previously moved here
//    |          ----
// 71 |     _ = c.two.two	// error: Use of moved value c.two.two
//    |              ^^^^
// 
// examples/typechecking/affine.an:83:14
// 76 |     r = Resource 42
// 77 |     consume r	// note: r was previously moved here
//    |             -
// 78 |     ()
// .. | 
// 82 |     ()
// 83 |     take_two r r	// error: Use of moved value r
//    |              ^
// 
// Found 5 errors and 0 warnings

